--- a/index.html
+++ b/index.html
@@ -14,4 +14,5 @@
 <p> Et voilà le texte de la page</p>
 <h2> On peut créer jusqu'à six niveaux de titres en HTML </h2>
 <p> Et voici un autre paragraphe </p> 
+<p>"Je viens d’éditer ce fichier sur GitHub !"<p>
 </body> 
