--- a/index.html
+++ b/index.html
@@ -15,4 +15,5 @@
 <h2> On peut créer jusqu'à six niveaux de titres en HTML </h2>
 <p> Et voici un autre paragraphe </p> 
 <p>"Je viens d’éditer ce fichier sur GitHub !"<p>
+<p>"Je viens d’éditer ce fichier en local!"<p></p>    
 </body> 
