--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
 <title> Le titre qui apparaitra dans le navigateur </title>
 <meta charset="UTF-8">
 </head>
-<a href= "http://www.wildcodeschool.com"> titre du lien </a>
+
 <body>
 <h1> Ici le titre principal </h1>
+<a href= "http://www.wildcodeschool.com"> Wild Code School </a>
+<img src= "https://res.cloudinary.com/wildcodeschool/image/upload/c_fill,h_50/v1/static/irjoy97aq0eol8bf6959">
+</html>
 <p> Et voilà le texte de la page</p>
 <h2> On peut créer jusqu'à six niveaux de titres en HTML </h2>
 <p> Et voici un autre paragraphe </p> 
+<p>"Je viens d’éditer ce fichier sur GitHub !"<p>
+<p>"Je viens d’éditer ce fichier en local!"<p></p>    
 </body> 
-</html>
